implemted common apis for late fee system: 1. Api to check if user has active late fee - to restrict checkout 2. Api to add late fee to a user - integrate in book management
pushing empty .env

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-MONGODB_URI=mongodb+srv://aiwinmanuel652:webgrp13@group13.gs7y5qc.mongodb.net/?retryWrites=true&w=majority&appName=group13
+MONGODB_URI=
+PORT=
+FRONTEND_URI=https://main--bookstack-csci-group-13.netlify.app/
