--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0"
   }
 }
