--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,2 @@
-BACKEND_URL=mention the url to the deployed backend
+REACT_APP_BACKEND_URL=mention the url to the deployed backend
+REACT_APP_ENV="production" or "development"
