--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "firebase": "^10.10.0",
     "mongoose": "^8.1.3",
     "pako": "^2.1.0",
     "react": "^18.2.0",
