- added reservation schema - changed start script of frontend to automatically install node modules - style fixes in latefeesystem: fixed image height and width, mobile responsive, search icon - added enum util for reservation schema

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BookStack",
+  "name": "bookstack",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,7 +36,7 @@
     "zlib": "^1.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm install && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
