--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
+// Author - Abhinav Acharya Tirumala Vinjamuri
 MONGODB_URI=url to your mongo db
 PORT=desired port number
 FRONTEND_URI=deployed frontend url
