--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,3 @@
+// Author - Abhinav Acharya Tirumala Vinjamuri
 REACT_APP_BACKEND_URL=mention the url to the deployed backend
 REACT_APP_ENV="production" or "development"
